# realistic-thermal-autopilot-tmp

./: .dvcignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  Taskfile.yml  dvc.yaml  gitman.yml  params.yaml  pyproject.toml
.dvc/: config
config/birds/: bird_plot_gaussian_thermal_config.yaml  bird_plot_realistic_thermal_config.yaml  bird_train_config.yaml  multi_agent_eval_policy_config.yaml  multi_agent_eval_policy_multirun_config.yaml  multi_agent_eval_teacher_alone_base_config.yaml  play_observation_log_config.yaml  prepare_bird_trajectory_config.yaml  prepare_bird_trajectory_multirun_config.yaml  single_agent_eval_policy_config.yaml  single_agent_eval_policy_multirun_config.yaml  two_level_multi_agent_train_config.yaml
config/birds/logger/: local_tensorboard_logger.yaml  mlflow_logger.yaml  neptune_logger.yaml
config/birds/observation_log_player/: grid_air_velocity_sampler.yaml  polar_air_velocity_sampler.yaml  record_video.yaml
config/birds/thermal_plots/: b010.yaml  b0230.yaml  b072.yaml  b077.yaml  b112.yaml  b121.yaml
config/birds/videos/: gaussian_during_training_160m.yaml  gaussian_during_training_300m.yaml  realistic_with_birds.yaml  training_base.yaml
data/bird_comparison/: .gitignore
data/bird_comparison/processed/: .gitignore
data/cache/: .gitignore
data/cache/player/: .gitignore  b010.dvc  b0230.dvc  b072.dvc  b077.dvc  b112.dvc  b121.dvc
data/models/multi_agent/: .gitignore
data/models/single_agent/: .gitignore
results/: .gitignore
results/analysis/from_close_distance_using_bird_wing_loadings/: .gitignore
results/analysis/from_different_distances_using_train_glider/: .gitignore
rl/distributions/: __init__.py  config.py  distribution.py
rl/model/: multi_agent_model_config.py  ppo_custom_transformer_model_config.py
rl/scripts/: download_model.py  run_custom_job.py  run_eval.py  run_plot_thermal.py  run_statistics.py  run_train.py
rl/trainer/: __init__.py
rl/utils/: __init__.py  cleanup_numpy_from_dictionary.py  create_params_from_yaml_string.py  custom_job_api.py  differential_rotator.py  find_suitable_torch_device.py  gradient_visualizer.py  launch_hydra.py  logging.py  modular_shortest_path_interpolator.py  multirun_hydra_statistics_concat_callback.py  plot_style.py  quaternion_from_yaw_pitch_roll.py  random_state.py  recursive_dictionary_walker.py  rolling_window_filter.py  running_stats.py  trajectory_state_interpolator.py  type_config.py  unpivot_by_two_columns.py  vector.py
rl/visualization/: air_velocity_coordinate_sampler.py  air_velocity_scene_actor.py  calculate_resolution.py  config.py  create_uniform_polar_grid.py  glider_agent_actor.py  observation_log_player_job.py  observation_log_scene_loader.py  scene_player.py  trail_line.py
(+926 files in other folders)
